--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 
               <!-- start slide -->
               <div class="slide2 first2">
-                <div class="imgGoogle">
+                <!-- <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
                 <div class="slide-img">
@@ -545,12 +545,13 @@
                 </div>
                 <div class="slide-text">
                   "Fiquei muito satisfeito com o serviço da Ns Clean. Minhas roupas voltaram impecáveis, como se fossem novas. O cuidado com cada detalhe realmente faz a diferença. Com certeza, voltarei a utilizar os serviços!"
-                </div>
+                </div> -->
+                <img src="img/feedback-patricia.png" alt="mensagem de feedback do whatsapp">
               </div>
               <div class="slide2" data-aos="flip-left"
               data-aos-easing="ease-out-cubic"
               data-aos-duration="2000">
-                <div class="imgGoogle">
+                <!-- <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
                 <div class="slide-img">
@@ -569,12 +570,13 @@
                 </div>
                 <div class="slide-text">
                   "A equipe da Ns Clean é super profissional. Além de entregarem tudo limpo e bem cuidado, o atendimento é sempre cordial e atencioso. Não tenho nada a reclamar, só elogios!"
-                </div>
+                </div> -->
+                <img src="img/feedback-anaPaula.png" alt="mensagem de feedback do whatsapp">
               </div>
               <div class="slide2" data-aos="flip-left"
               data-aos-easing="ease-out-cubic"
               data-aos-duration="2000">
-                <div class="imgGoogle">
+                <!-- <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
                 <div class="slide-img">
@@ -593,12 +595,14 @@
                 </div>
                 <div class="slide-text">
                   "O serviço de higienização da Ns Clean é excelente. Meus estofados ficaram com uma aparência renovada, e o processo todo foi muito eficiente. Recomendo para todos!"
-                </div>
+                </div> -->
+                <img src="img/feedback-carolina.png" alt="mensagem de feedback do whatsapp">
+
               </div>
               <div class="slide2" data-aos="flip-left"
               data-aos-easing="ease-out-cubic"
               data-aos-duration="2000">
-                <div class="imgGoogle">
+                <!-- <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
                 <div class="slide-img">
@@ -617,12 +621,13 @@
                 </div>
                 <div class="slide-text">
                   "Adorei o resultado! Minhas roupas e estofados voltaram perfeitos, sem nenhum defeito ou mancha. O serviço foi rápido e o atendimento, impecável. Muito obrigada, Ns Clean!"
-                </div>
+                </div> -->
+                <img src="img/feedback-cliente.png" alt="mensagem de feedback do whatsapp">
               </div>
               <div class="slide2" data-aos="flip-left"
               data-aos-easing="ease-out-cubic"
               data-aos-duration="2000">
-                <div class="imgGoogle">
+                <!-- <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
                 <div class="slide-img">
@@ -641,12 +646,14 @@
                 </div>
                 <div class="slide-text">
                   "Muito satisfeito com a qualidade do serviço da Ns Clean. Eles cuidam das minhas roupas com tanta dedicação que nem parece uma lavanderia comum. Atendimento excelente!"
-                </div>
+                </div> -->
+                <img src="img/feedback-soraia.png" alt="mensagem de feedback do whatsapp">
+
               </div>
               <div class="slide2 noneSlide" data-aos="flip-left"
               data-aos-easing="ease-out-cubic"
               data-aos-duration="2000">
-                <div class="imgGoogle">
+                <!-- <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
                 <div class="slide-img">
@@ -665,12 +672,14 @@
                 </div>
                 <div class="slide-text">
                   "A Ns Clean superou minhas expectativas com o serviço de lavanderia para o meu restaurante. As toalhas e uniformes sempre voltam impecáveis e com uma fragrância agradável."
-                </div>
+                </div> -->
+                <img src="img/feedback-luana.png" alt="mensagem de feedback do whatsapp">
+
               </div>
               <div class="slide2 noneSlide" data-aos="flip-left"
               data-aos-easing="ease-out-cubic"
               data-aos-duration="2000">
-                <div class="imgGoogle">
+                <!-- <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
                 <div class="slide-img">
@@ -689,12 +698,14 @@
                 </div>
                 <div class="slide-text">
                   "Contratei a Ns Clean para a higienização completa da minha casa, e o resultado foi excelente. A equipe foi muito profissional, usando produtos de alta qualidade e deixando cada canto da casa brilhando."
-                </div>
+                </div> -->
+                <img src="img/feedback-larisse.png" alt="mensagem de feedback do whatsapp">
+
               </div>
               <div class="slide2 noneSlide" data-aos="flip-left"
               data-aos-easing="ease-out-cubic"
               data-aos-duration="2000">
-                <div class="imgGoogle">
+                <!-- <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
                 <div class="slide-img">
@@ -713,7 +724,9 @@
                 </div>
                 <div class="slide-text">
                   "Fiquei impressionado com o serviço de limpeza de carpetes da Ns Clean. Meu carpete estava manchado e desgastado, mas após a higienização, ele voltou a ter uma aparência incrível."
-                </div>
+                </div> -->
+                <img src="img/feedback-vanusa.png" alt="mensagem de feedback do whatsapp">
+
               </div>
               <!-- end slide -->
 
